* New TSPSG icon. Found some nice image among heap of images on my PC and thought it would be a nice icon for TSPSG. Original source: Internet (read, unknown). * Some insignificant code changes.

--- a/resources/tspsg.rc
+++ b/resources/tspsg.rc
@@ -38,7 +38,7 @@ BEGIN
     BEGIN
         BLOCK "000004b0"
         BEGIN
-//            VALUE "Comments", BUILD_STATUS
+            VALUE "Comments", VERSIONID
             VALUE "CompanyName", "..::Lёppsville::.. Homes"
             VALUE "FileDescription", "TSPSG: TSP Solver and Generator"
             VALUE "FileVersion", BUILD_VERSION
