+ Added Fractional accuracy (in decimail places) to settings. + Created defaults.h file. Moved all default defines there. * Replaced all double types with qreal. * Replaced all calls to trUtf8() with tr() as we use setCodecForTr() to set UTF-8 encoding as default and tr() is enough. * Replaced all 2009 with 2010 in copyrights. - Fixed an error when loading .zkt file with less than 5 cities.

--- a/resources/tspsg.rc
+++ b/resources/tspsg.rc
@@ -1,6 +1,6 @@
 /*
  *  TSPSG: TSP Solver and Generator
- *  Copyright (C) 2007-2009 Lёppa <contacts[at]oleksii[dot]name>
+ *  Copyright (C) 2007-2010 Lёppa <contacts[at]oleksii[dot]name>
  *
  *  $Id$
  *  $URL$
@@ -49,7 +49,7 @@ BEGIN
             VALUE "FileDescription", "TSPSG: TSP Solver and Generator"
             VALUE "FileVersion", BUILD_VERSION
             VALUE "InternalName", "TSPSG"
-            VALUE "LegalCopyright", "Copyright © 2007 - 2009 Lёppa"
+            VALUE "LegalCopyright", "Copyright © 2007-2010 Lёppa <contacts[at]oleksii[dot]name>"
             VALUE "OriginalFilename", "tspsg.exe"
             VALUE "ProductName", "TSPSG"
             VALUE "ProductVersion", BUILD_VERSION
