--- a/doxygen.conf
+++ b/doxygen.conf
@@ -1,3 +1,15 @@
+######################################################################
+#
+# TSPSG: TSP Solver and Generator
+# Copyright (C) 2007-2010 Lёppa <contacts[at]oleksii[dot]name>
+#
+# $Id$
+# $URL$
+#
+# This file is part of TSPSG.
+#
+######################################################################
+
 # Doxyfile 1.6.1
 
 # This file describes the settings to be used by the documentation system
