--- a/resources/tspsg.rc
+++ b/resources/tspsg.rc
@@ -22,16 +22,14 @@ VS_VERSION_INFO VERSIONINFO
 	FILEVERSION BUILD_VERSION_MAJOR,BUILD_VERSION_MINOR,BUILD_RELEASE,BUILD_NUMBER
 	PRODUCTVERSION BUILD_VERSION_MAJOR,BUILD_VERSION_MINOR,BUILD_RELEASE,BUILD_NUMBER
 	FILEFLAGSMASK 0x17L
-#if defined(_DEBUG) || defined(DEBUG)
+#if defined(DEBUG)
 	FILEFLAGS VS_FF_DEBUG | VS_FF_PRERELEASE | VS_FF_PRIVATEBUILD
+#elif !defined(TSPSG_RELEASE_BUILD) || (BUILD_NUMBER == 65535)
+	FILEFLAGS VS_FF_PRERELEASE | VS_FF_SPECIALBUILD
+#elif BUILD_RELEASE < 11
+	FILEFLAGS VS_FF_PRERELEASE
 #else
-	#if BUILD_NUMBER == 65535
-		FILEFLAGS VS_FF_PRERELEASE | VS_FF_SPECIALBUILD
-	#elif BUILD_RELEASE < 11
-			FILEFLAGS VS_FF_PRERELEASE
-	#else
-			FILEFLAGS 0x0L
-	#endif
+	FILEFLAGS 0x0L
 #endif
 #ifdef Q_OS_WINCE
 	FILEOS VOS_WINCE
@@ -44,7 +42,7 @@ BEGIN
     BEGIN
         BLOCK "000004b0"
         BEGIN
-            VALUE "Comments", VERSIONID
+//            VALUE "Comments", VERSIONID
             VALUE "CompanyName", "..::Lёppsville::.. Homes"
             VALUE "FileDescription", "TSPSG: TSP Solver and Generator"
             VALUE "FileVersion", BUILD_VERSION
