--- a/resources/tspsg.rc
+++ b/resources/tspsg.rc
@@ -43,13 +43,13 @@ BEGIN
         BLOCK "000004b0"
         BEGIN
 //            VALUE "Comments", VERSIONID
-            VALUE "CompanyName", "..::Lёppsville::.. Homes"
+            VALUE "CompanyName", "Oleksii ""Lёppa"" Serdiuk"
             VALUE "FileDescription", "TSPSG: TSP Solver and Generator"
             VALUE "FileVersion", BUILD_VERSION
             VALUE "InternalName", "TSPSG"
-            VALUE "LegalCopyright", "Copyright © 2007-2010 Lёppa <contacts[at]oleksii[dot]name>"
+            VALUE "LegalCopyright", "Copyright © 2007-2010 Oleksii ""Lёppa"" Serdiuk <contacts[at]oleksii[dot]name>"
             VALUE "OriginalFilename", "tspsg.exe"
-            VALUE "ProductName", "TSPSG"
+            VALUE "ProductName", "TSPSG: TSP Solver and Generator"
             VALUE "ProductVersion", BUILD_VERSION
 #if defined(_DEBUG) || defined(DEBUG)
             VALUE "PrivateBuild", "Debug development build"
