--- a/doxygen.conf
+++ b/doxygen.conf
@@ -1314,7 +1314,7 @@ INCLUDE_FILE_PATTERNS  =
 # undefined via #undef or recursively expanded use the := operator 
 # instead of the = operator.
 
-PREDEFINED             = __i386__ Q_OS_WIN32
+PREDEFINED             = __i386__ Q_OS_WIN32 DOXYGEN_EXCLUDE
 
 # If the MACRO_EXPANSION and EXPAND_ONLY_PREDEF tags are set to YES then 
 # this tag can be used to specify a list of macro names that should be expanded. 
