+ Added question about enabling automatic updates (will be asked only once). * Updated translations.

--- a/doxygen.conf
+++ b/doxygen.conf
@@ -37,7 +37,7 @@ DOXYFILE_ENCODING      = UTF-8
 # The PROJECT_NAME tag is a single word (or a sequence of words surrounded 
 # by quotes) that should identify the project.
 
-PROJECT_NAME           = "TSPSG: TSP Solver and Generator"
+PROJECT_NAME           = "TSP Solver and Generator"
 
 # The PROJECT_NUMBER tag can be used to enter a project or revision number. 
 # This could be handy for archiving the generated documentation or 
