Made some documentation-related updates. Also, updated Qt tagfile from 4.6 to 4.7.

--- a/doxygen.conf
+++ b/doxygen.conf
@@ -202,6 +202,7 @@ TAB_SIZE               = 4
 # You can put \n's in the value part of an alias to insert newlines.
 
 ALIASES                = "hack=\xrefitem hacks \"Hack\" \"Hack List\""
+ALIASES               += "ticket{2}=<a href=\"http://bugs.tspsg.info/ticket/\1\">\2</a>"
 
 # Set the OPTIMIZE_OUTPUT_FOR_C tag to YES if your project consists of C 
 # sources only. Doxygen will then generate output that is more tailored for C. 
@@ -1350,7 +1351,7 @@ SKIP_FUNCTION_MACROS   = YES
 # If a tag file is not located in the directory in which doxygen 
 # is run, you must also specify the path to the tagfile here.
 
-TAGFILES               = docs/qt-4.6.tag=http://doc.trolltech.com/4.6
+TAGFILES               = docs/qt-4.7.tag=http://doc.trolltech.com/4.7
 
 # When a file name is specified after GENERATE_TAGFILE, doxygen will create 
 # a tag file that is based on the input files it reads.
