--- a/resources/tspsg.rc
+++ b/resources/tspsg.rc
@@ -9,7 +9,7 @@
  */
 
 #include <winver.h>
-#include "..\\src\\resource.h"
+#include "../src/resource.h"
 #pragma code_page(65001)
 
 LANGUAGE	0x00, 0x00
