Converted svn keywords into git export-subst attribute.
However, keywords are now replaced only when you run 'git archive'.

--- a/resources/tspsg.rc
+++ b/resources/tspsg.rc
@@ -2,8 +2,8 @@
  *  TSPSG: TSP Solver and Generator
  *  Copyright (C) 2007-2010 Lёppa <contacts[at]oleksii[dot]name>
  *
- *  $Id$
- *  $URL$
+ *  $Id: $Format:%h %ai %an$ $
+ *  $URL: http://tspsg.info/ $
  *
  *  This file is part of TSPSG.
  */
