--- a/doxygen.conf
+++ b/doxygen.conf
@@ -3,8 +3,8 @@
 # TSPSG: TSP Solver and Generator
 # Copyright (C) 2007-2011 Lёppa <contacts[at]oleksii[dot]name>
 #
-# $Id$
-# $URL$
+# $Id: $Format:%h %ai %an$ $
+# $URL: http://tspsg.info/ $
 #
 # This file is part of TSPSG.
 #
