--- a/resources/tspsg.rc
+++ b/resources/tspsg.rc
@@ -43,11 +43,11 @@ BEGIN
 //            VALUE "Comments", VERSIONID
             VALUE "ProductName", "TSP Solver and Generator"
             VALUE "ProductVersion", BUILD_VERSION
-            VALUE "CompanyName", "Oleksii ""Lёppa"" Serdiuk"
+            VALUE "CompanyName", "Oleksii Serdiuk"
             VALUE "FileDescription", "TSPSG: TSP Solver and Generator"
             VALUE "FileVersion", BUILD_VERSION
             VALUE "InternalName", "TSPSG"
-            VALUE "LegalCopyright", "Copyright © 2007-2010 Oleksii ""Lёppa"" Serdiuk <contacts[at]oleksii[dot]name>"
+            VALUE "LegalCopyright", "Copyright © 2007-2010 Oleksii Serdiuk <contacts[at]oleksii[dot]name>"
 #ifdef DEBUG
             VALUE "OriginalFilename", "tspsgd.exe"
 #else
